--- a/app/src/main/res/layout/main_screen_local_file.xml
+++ b/app/src/main/res/layout/main_screen_local_file.xml
@@ -20,7 +20,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:orientation="horizontal">
                 <Button
                     android:id="@+id/local_file_copy_cut_info_btn"
@@ -44,7 +44,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="2dp"
-                    android:layout_marginRight="2dp"
                     android:minHeight="36dp" />
             </LinearLayout>
 
