--- a/app/src/main/res/layout/password_prompt_dlg.xml
+++ b/app/src/main/res/layout/password_prompt_dlg.xml
@@ -55,14 +55,18 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
              />
 
-        <EditText
-            android:id="@+id/password_prompt_dlg_itemname"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:inputType="textPassword"
-            android:visibility="gone" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_prompt_dlg_itemname"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:inputType="textPassword"
+                android:visibility="gone" />
+        </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
     <include layout="@layout/password_prompt_dlg_ok_cancel"/>
