--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -27,13 +27,43 @@
             app:tabMode="fixed"
             />
 
-        <com.sentaroh.android.Utilities3.Widget.CustomViewPager
-            android:id="@+id/main_screen_pager"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+<!--        <FrameLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--            <com.sentaroh.android.Utilities3.Widget.CustomViewPager-->
+<!--                android:id="@+id/main_screen_pager"-->
+<!--                android:layout_width="fill_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="1"-->
+<!--                />-->
+
+<!--            <include layout="@layout/main_dialog"/>-->
+
+<!--        </FrameLayout>-->
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <include layout="@layout/main_dialog" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <com.sentaroh.android.Utilities3.Widget.CustomViewPager
+                    android:id="@+id/main_screen_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
-</LinearLayout>    
+</LinearLayout>
