--- a/app/src/main/res/layout/password_prompt_dlg.xml
+++ b/app/src/main/res/layout/password_prompt_dlg.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/password_prompt_dlg_view"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -56,14 +58,17 @@
              />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_prompt_dlg_itemname_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_prompt_dlg_itemname"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:visibility="gone" />
         </com.google.android.material.textfield.TextInputLayout>
