--- a/app/src/main/res/values-fr/fr_string_resource.xml
+++ b/app/src/main/res/values-fr/fr_string_resource.xml
@@ -21,6 +21,7 @@
         <string name="msgs_main_about_title">À propos de ZipUtility3</string>
         <string name="msgs_main_confirm_cancel">Voulez-vous annuler</string>
         <string name="msgs_main_theme_changed_msg">Si vous modifiez le thème, la langue ou la taille de la police, le changement ne prendra effet que lorsque vous redémarrerez l\'application.\nSouhaitez-vous redémarrer l\'application maintenant ?</string>
+        <string name="msgs_main_snackbar_action_hide">Hide</string>
         <string name="msgs_main_select_file">Sélectionnez le fichier ZIP</string>
         <string name="msgs_main_invalid_zip_file_specified">Le fichier spécifié n\'est pas un fichier ZIP.</string>
         <string name="msgs_main_tab_name_local">Dossier local</string>
@@ -34,7 +35,6 @@
         <string name="msgs_main_local_file_ccmenu_open_directory">Ouvrir l\'annuaire</string>
         <string name="msgs_main_local_file_ccmenu_extract">Extrait</string>
         <string name="msgs_main_local_file_ccmenu_delete">Supprimer</string>
-        <string name="deleted_msgs_main_local_file_ccmenu_scan_media_store">Scanner le fichier média</string>
         <string name="msgs_main_local_file_ccmenu_compress">Compresser</string>
         <string name="msgs_main_local_file_ccmenu_copy">Copy to clipboard</string>
         <string name="msgs_main_local_file_ccmenu_cut">Cut to clipboard</string>
@@ -147,12 +147,13 @@
         <string name="msgs_zip_parm_dlg_title">Spécifier le paramètre ZIP</string>
         <string name="msgs_zip_parm_pswd_not_specified">Précisez le mot de passe.</string>
         <string name="msgs_zip_parm_confirm_pswd_unmatched">Le mot de passe et la confirmation d\'un mot de passe ne correspondent pas.</string>
-        <string name="msgs_zip_parm_zip_comp_level_promopt">Sélectionnez le niveau de dégonflement</string>
+        <string name="msgs_zip_parm_password_hint">Mot de passe</string>
+        <string name="msgs_zip_parm_confirm_password_hint">Confirmer le mot de passe</string>
         <string name="msgs_zip_parm_zip_comp_level_fastest">FASTEST</string>
         <string name="msgs_zip_parm_zip_comp_level_fast">FAST</string>
         <string name="msgs_zip_parm_zip_comp_level_normal">NORMAL</string>
         <string name="msgs_zip_parm_zip_comp_level_maximum">MAXIMUM</string>
-        <string name="msgs_zip_parm_zip_comp_level_title">Niveau de déflation</string>
+        <string name="msgs_zip_parm_zip_comp_level_title">Niveau de compression</string>
         <string name="msgs_zip_parm_zip_encrypt_method_title">Cryptage</string>
         <string name="msgs_zip_parm_zip_encrypt_method_none">Aucune</string>
         <string name="msgs_zip_parm_zip_encrypt_method_zip_crypto">ZipCrypto</string>
@@ -195,6 +196,49 @@
         <string name="msgs_local_file_add_file_cancelled">%s Compression annulée.</string>
         <string name="msgs_local_file_add_file_begin">La compression a commencé.</string>
         <string name="msgs_local_file_add_file_completed">La compression a été terminée.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_move_started">Début du déplacement des fichiers.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_copy_started">Début de la copie des fichiers.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_file_copying">Copie de %1$s. %2$s%% terminée.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_file_copy_cancelled">La copie de %s a été annulée.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_file_copy_failed">La copie de %s a échoué.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_file_move_cancelled">Déplacement de %s annulé.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_file_rename_cancelled">Renommer %s a échoué.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_zip_output_cancelled">La mise à jour de %s a été annulée.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_zip_output_failed">La mise à jour de %s a échoué.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_copy_completed">La copie est terminée.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_file_copy_completed">Le fichier a été copié. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_file_move_completed">Fichier déplacé. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_move_completed">Déplacement terminé.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_zip_output_updating">Mise à jour du fichier ZIP de sortie, File=%1$s %2$s%%.</string>
+        <string name="msgs_zip_file_manager_zip_to_zip_zip_input_updating">Mise à jour du fichier ZIP source, File=%1$s %2$s%%.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_move_started">Début du déplacement du fichier.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_copy_started">Début de la copie du fichier.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_file_copying">Copie du fichier. Fichier=%1$s, %2$s%% terminé.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_file_copy_completed">Copie de %s.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_file_replace_rejected">L\'écrasement de %s a été rejeté.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_file_move_cancelled">Le déplacement a été annulé. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_local_to_zip_file_copy_cancelled">La copie a été annulée. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_local_to_zip_file_error_occured">Une erreur s\'est produite. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_local_to_zip_move_completed">Déplacement terminé.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_copy_completed">Copie terminée.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_update_failed">Échec de la mise à jour du fichier ZIP.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_create_failed">Échec de la création du BufferedZipFile3.</string>
+        <string name="msgs_zip_file_manager_local_to_zip_delete_moved_directory">Suppression du répertoire déplacé. Répertoire=%s</string>
+        <string name="msgs_zip_file_manager_local_to_zip_delete_moved_file">Suppression du fichier déplacé. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_zip_to_local_move_started">Début du déplacement du fichier.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_copy_started">Début de la copie des fichiers.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_copy_cancelled">Copie de %s annulée.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_copying">Copie de %%1$s. %2$s%% terminée.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_move_cancelled">Déplacement de %s annulé.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_copy_failed">La copie de %s a échoué.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_file_move_completed">Fichier déplacé. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_zip_to_local_file_copy_completed">Fichier copié. Fichier=%s</string>
+        <string name="msgs_zip_file_manager_zip_to_local_zip_update_cancelled">La mise à jour de %s a été annulée.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_zip_update_failed">La mise à jour de %s a échoué.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_move_completed">Déplacement terminé.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_file_rename_failed">Le renommage de %s a échoué.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_copy_completed">Copie terminée.</string>
+        <string name="msgs_zip_file_manager_zip_to_local_zip_input_zip_updating">Mise à jour du fichier ZIP source, File=%1$s %2$s%%.</string>
         <string name="msgs_local_file_share_file_max_file_count_reached">Le nombre de fichiers partagés peut aller jusqu\'à 100.</string>
         <string name="msgs_local_file_share_file_no_file_selected">Aucun dossier n\'a été sélectionné.</string>
         <string name="msgs_local_file_ignore_android_directory">Vous ne pouvez pas couper/supprimer/renommer le répertoire Android.</string>
